tests/paczka1/small_fuzzy/12610530.err
Error in line 9: bqWQ6 S46 88,00
Error in line 3: DDavGyA6Fh S795 16,0
Error in line 12: DDavGyA6Fh A973 78,0
